# 2026-h1-building-production-grade-dApps

./: README.md
course/lesson-1/src/: .index.ts.un~  index.ts  index.ts~
course/lesson-5/js-sdk/: README.md  ether-main.ts  package-lock.json  package.json
course/lesson-5/js-sdk/src/: contract.ts  viem_main.ts
course/lesson-6/graph/usd/: package.json  subgraph.yaml
course/lesson-6/graph/usd/abis/: TetherToken.json
course/lesson-6/graph/usd/tests/: tether-token.test.ts
course/lesson-6/hardhat/: README.md  hardhat.config.ts
course/lesson-6/hardhat/contracts/: Counter.sol
course/lesson-6/hardhat/ignition/deployments/chain-420420417/: deployed_addresses.json  journal.jsonl
course/lesson-6/hardhat/ignition/deployments/chain-420420417/artifacts/: CounterModule#Counter.json
course/lesson-6/hardhat/ignition/deployments/chain-420420417/build-info/: solc-0_8_28-8cc9cbf2ac40f87de4c8647e1dff4eddc321d31f.json
course/lesson-6/hardhat/ignition/modules/: Counter.ts
homework/lesson-1/1951/: .task1.md.un~  task1.md~
homework/lesson-1/1951/wallet-query/src/: .index.ts.un~  index.ts~
homework/lesson-1/2083/: lesson1.md
homework/lesson-1/398/: task1.md
homework/lesson-2/: README.md
homework/lesson-2/1604/src/: index.ts
homework/lesson-2/1609/: README.md  accounts.ts  demo.ts  index.ts  package.json  precompile.ts  tsconfig.json  utils.ts
homework/lesson-3/1604/miniswap/: .gitignore  README.md  hardhat.config.ts  miniSwap.sol  package-lock.json  package.json
homework/lesson-3/1604/miniswap/scripts/: deploy.ts
homework/lesson-3/1604/miniswap/test/: MiniSwap.test.ts
homework/lesson-3/1604/miniswap/ui/: vite.config.ts
homework/lesson-3/1604/miniswap/ui/src/: constants.ts
homework/lesson-3/1609/: App.css  App.tsx  LOCAL_TEST_REPORT.json  LOCAL_TEST_REPORT.txt  LOCAL_TEST_SUMMARY.md  MiniSwap.sol  MiniSwap.test.ts  README.md  SUBMISSION_PACKAGE.md  TestToken.sol  UNISWAP_V2_TEST_REPORT.md  deploy.ts  hardhat.config.ts  local-test.cjs  package-test.json  package.json
homework/lesson-3/1924/uniswap-v2-polkadot/: .env.example  hardhat.config.js  package-lock.json  package.json
homework/lesson-3/597/: MiniSwap.sol  README.md
homework/lesson-5/2108/: 2108_README.md  Cargo.toml  README.md  README_2108.md  RUNNING_STATUS.md  TEST_REPORT.md
homework/lesson-5/2108/contracts/: README.md
homework/lesson-5/2108/docs/: deployment.md
homework/lesson-5/2108/frontend/: index.html  package.json  webpack.config.js
homework/lesson-5/2108/frontend/src/: index.js
homework/lesson-5/2108/node/: Cargo.toml
homework/lesson-5/2108/node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
homework/lesson-5/2108/pallets/template/: Cargo.toml
homework/lesson-5/2108/pallets/template/src/: lib.rs
homework/lesson-5/2108/runtime/: Cargo.toml
homework/lesson-5/2108/runtime/src/: lib.rs
homework/lesson-5/2108/scripts/: check-setup.sh  minimal_package.sh  monitor.sh  quick-test.sh  start-all.sh
